--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-
       <div class="container">
         <div class="header__background"></div>
         <div class="header__content">
@@ -45,7 +44,7 @@
       </div>
     </header>
 
-    <nav class="page__menu menu" id="menu">
+    <nav class="page__menu menu" scroll="no" id="menu">
       <div class="container">
         <div class="menu__content">
           <div class="menu__header">
@@ -183,79 +182,85 @@
     </main>
     <footer class="footer page__footer" id="contacts">
       <div class="container">
-        <div class="grid footer__block"> 
+        <div class="grid footer__block">
           <div class="footer__top">
             <a href="#" class="footer__logo">
               <img src="./images/NA MU.svg" alt="NAMU logo" class="logo__img">
             </a>
             <div class="footer__social">
-              <a href="https://www.facebook.com/" class="footer__icon">
+              <a href="https://www.facebook.com/namu.museum/" class="footer__icon" target="_blank">
                 <img src="images/Facebook.svg" alt="facebook">
               </a>
-              <a href="https://www.instagram.com/" class="footer__icon">
+              <a href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y=" class="footer__icon" target="_blank">
                 <img src="images/instagram.svg" alt="instagram">
               </a>
             </div>
           </div>
 
-            <div class="footer__hours grid__item--tablet-2-3 grid__item--desktop-3-4">
-              <h3 class="footer__title">Графік роботи</h3>
-              <p class="footer__schedule">
-                <span class="footer__span">12:00— 20:00</span> середа<br>
-                <span class="footer__span">12:00— 20:00</span> четвер<br>
-                <span class="footer__span">12:00 — 20:00</span> п’ятниця<br>
-                <span class="footer__span">11:00 — 19:00</span> субота<br>
-                <span class="footer__span">11:00 — 19:00</span> неділя
-                <br>
-                <br>
-                <span class="footer__span">Вихідні:</span>понеділок, вівторок<br>Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
-            </div>
-            <div class="footer__contact grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
-              <h3 class="footer__title">Контакти:</h3>
-              <p class="footer__schedule">
-                вул. М. Грушевського, 6;<br>Київ, 01001
-                <br>тел. +38 (044) 278-13-57
-                <br>факс +38 (044) 278-74-54
-                <br>e-mail: info@namu.kiev.ua</p>
-            </div>
-            <div class="footer__line grid__item grid__item--tablet-4-5 grid__item--desktop-7-7"></div>
-            <nav class="nav grid__item grid__item--tablet-2-3 grid__item--desktop-8-9">
-              <ul class="nav__list">
-                  <li class="nav__item">
-                    <a href="#gallery" class="nav__link">
-                      Галерея
-                    </a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#events" class="nav__link">
-                      Виставки та події
-                    </a>
-                  </li>
-                </ul>
-                </nav>
-                <nav class="nav grid__item grid__item--tablet-4-5 grid__item--desktop-10-11">
-                <ul class="nav__list">
-                  <li class="nav__item">
-                    <a href="#about-us" class="nav__link">
-                      Про Нас
-                    </a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#contacts" class="nav__link">
-                      Контакти
-                    </a>
-                  </li>
-                </ul>
-            </nav>
+          <div class="footer__hours grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <h3 class="footer__title">Графік роботи</h3>
+            <p class="footer__schedule">
+              <span class="footer__span">12:00— 20:00</span> середа<br>
+              <span class="footer__span">12:00— 20:00</span> четвер<br>
+              <span class="footer__span">12:00 — 20:00</span> п’ятниця<br>
+              <span class="footer__span">11:00 — 19:00</span> субота<br>
+              <span class="footer__span">11:00 — 19:00</span> неділя
+              <br>
+              <br>
+              <span class="footer__span">Вихідні:</span>понеділок, вівторок<br>Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
           </div>
-            <div class="footer__rights">
-              <p class="footer__right">Designed by Zhyriada Marina</p>
-              <p class="footer__right">Copyright © 2019. All Rights Reserved.</p>
-            </div>
+          <div class="footer__contact grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <h3 class="footer__title">Контакти:</h3>
+            <p class="footer__schedule">
+              <a href="https://goo.gl/maps/8u97TtpgHuFnRLrr5" target="_blank" class="footer__links">
+                вул. М. Грушевського, 6;<br>Київ, 01001
+              </a>
+              <br>тел. <a href="tel:+38 (044) 278-13-57" class="footer__links">+38 (044) 278-13-57</a>
+              <br>факс <a href="fax:+38 (044) 278-74-54" class="footer__links">+38 (044) 278-74-54</a>
+              <br>e-mail: <a href="mailto:info@namu.kiev.ua" class="footer__links">info@namu.kiev.ua</a>
+            </p>
+          </div>
+          <a href="#" class="footer__arrow-btn">
+            <img src="images/Arrow up.png" alt="arrow up" class="footer__arrow-img">
+          </a>
+          <div class="footer__line grid__item grid__item--tablet-4-5 grid__item--desktop-7-7"></div>
+          <nav class="nav grid__item grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="nav grid__item grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#about-us" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-      
+        <div class="footer__rights">
+          <p class="footer__right">Designed by Zhyriada Marina</p>
+          <p class="footer__right">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
