--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page">
     <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
