--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page">
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="header">
+      <div class="header__nav">
+        <a href="#" class="header__menu-opener"></a>
+        <div class="header__abbreviation">
+          NA<br>
+          MU
+        </div>
+      </div>
+      <div class="header__title">
+        <h1 class="header__title-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header__button">
+          <div class="header__button-container">КВИТКИ</div>
+          <div class="header__button-button"></div>
+        </div>
+        <a class="header__title-events" href="#events">
+          <span class="header__title-line"></span>
+          подіЇ
+        </a>
+      </div>
+    </header>
+
+
   </body>
 </html>
