--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,101 @@
     </header>
 
 
+
+    <main class="main">
+      <section class="main__events events">
+        <h2 class="events__title">
+          Актуальні
+          події
+        </h2>
+        <div class="events__card card">
+          <img
+            src="./images/Rectangle 1.png"
+            alt="gardobankColection"
+            class="card__image"
+          >
+          <div class="card__container container">
+            <div class="container__exibition">
+              ВИСТАВКА
+              <span class="container__exibition--date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <div class="container__title">
+              Йду і повертаюсь
+            </div>
+
+            <div class="container__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку -
+              українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>
+        </div>
+
+        <div class="events__card card">
+          <img
+            src="./images/Rectangle 2.png"
+            alt="gardobankColection"
+            class="card__image"
+          >
+
+          <div class="card__container container">
+            <div class="container__exibition">
+              ВИСТАВКА
+              <span class="container__exibition--date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <div class="container__title">
+              І спогади і мрії
+            </div>
+
+            <div class="container__text">
+              Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці  Тетяни Яблонської  відкриває ретроспективну
+            ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__classic classic">
+        <img
+          class="classic__image"
+          src="./images/Rectangle 3.png"
+          alt="classic"
+        >
+        <div class="classic__text">
+          <div class="classic__exibition">
+            ЛЕКЦІЯ
+            <span class="classic__exibition--date">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+          <div class="title--text--capital">
+            Від класицизму до романтизму
+          </div>
+
+        </div>
+      </section>
+
+      <section class="main__galery galery">
+        <h2 class="galery_title"></h2>
+        <div class="galery_photos"></div>
+        <div class="galery_dots"></div>
+      </section>
+
+      <section class="main__subscribe subscribe">
+        <h2 class="subscribe__title"></h2>
+        <p class="subscribe__description"></p>
+        <form class="subscribe__form form">
+          <input class="form__email">
+          <button class="form__submit"></button>
+        </form>
+      </section>
+    </main>
+
   </body>
 </html>
