--- a/src/index.html
+++ b/src/index.html
@@ -116,17 +116,63 @@
       </section>
 
       <section class="main__galery galery">
-        <h2 class="galery_title"></h2>
-        <div class="galery_photos"></div>
-        <div class="galery_dots"></div>
+        <h2 class="galery__title">
+          Галерея
+        </h2>
+        <div class="galery_photos">
+          <img
+            src="./images/gallery 1.png"
+            alt="woman"
+            class="galery_photos--item"
+          >
+
+          <img
+            src="./images/Rectangle 24.1.png"
+            alt="duck"
+            class="galery_photos--item galery_photos--item--hiden"
+          >
+
+          <img
+            src="./images/galery 2.png"
+            alt="winter"
+            class="galery_photos--item"
+          >
+
+          <img
+            src="./images/galery 3.png"
+            alt="park"
+            class="galery_photos--item"
+          >
+
+          <img
+            src="./images/galery 4.png"
+            alt="sea"
+            class="galery_photos--item"
+          >
+
+        </div>
+        <div class="galery__dots">
+          <div class="dots--1 dots">
+            <span class="dots__dot"></span>
+            <span class="dots__dot"></span>
+            <span class="dots__dot"></span>
+            <span class="dots__dot"></span>
+          </div>
+
+        </div>
       </section>
 
       <section class="main__subscribe subscribe">
-        <h2 class="subscribe__title"></h2>
-        <p class="subscribe__description"></p>
+        <h2 class="subscribe__title">
+          Підписка
+        </h2>
+        <p class="subscribe__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
         <form class="subscribe__form form">
-          <input class="form__email">
-          <button class="form__submit"></button>
+          <input class="form__email" placeholder="E-mail">
+          <button class="form__submit">
+          </button>
         </form>
       </section>
     </main>
