--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,449 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header" id="header">
+      <div class="header__content">
+        <div class="header__container">
+          <nav class="nav">
+            <div class="burger">
+              <div class="burger__icon">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+          </nav>
+          <div class="header__body">
+            <div class="burger__menu">
+              <div class="burger__wrapper">
+                <div class="burger__nav">
+                  <div class="burger__icon active">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+                </div>
+                <a href="./" class="burger__logo">
+                  <img
+                    src="./images/icon.svg"
+                    class="logo"
+                    alt="Logo"
+                  >
+                </a>
+                <ul class="burger__list">
+                  <li class="burger__li">
+                    <a href="#events" class="burger__link">Events</a>
+                  </li>
+                  <li class="burger__li">
+                    <a href="#main-event" class="burger__link">Main event</a>
+                  </li>
+                  <li class="burger__li">
+                    <a href="#galery" class="burger__link">Galery</a>
+                  </li>
+                  <li class="burger__li">
+                    <a href="#form-section" class="burger__link">Form</a>
+                  </li>
+                  <li class="burger__li">
+                    <a href="#footer" class="burger__link">Footer</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <h1 class="title header__title">Художній музей</h1>
+            <span class="header__hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error consequatur laboriosam vel ducimus? Veniam in inventore alias esse dolorem, nemo tenetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Error consequatur laboriosam vel ducimus? Veniam in inventore alias esse dolorem, nemo tenetur</span>
+            <div class="header__button-wrapper">
+              <div class="header__button">
+                <a href="#events" class="header__tickets-link">
+                  <span>квитки</span>
+                </a>
+                <a href="#events" class="header__arow-link"></a>
+              </div>
+            </div>
+          </div>
+          <a href="#events" class="header__event">Події</a>
+        </div>
+      </div>
+      <div class="header__image">
+        <a href="./" class="header__logo-link">
+          <img
+            src="./images/icon.svg"
+            class="logo logo--burger"
+            alt="Logo"
+          >
+        </a>
+        <nav class="nav nav--mod-tablet">
+          <div class="burger">
+            <div class="burger__icon">
+              <span class="class"></span>
+              <span class="class"></span>
+              <span class="class"></span>
+            </div>
+          </div>
+        </nav>
+        <img
+          src="./images/Museum.jpg"
+          alt="Museum"
+          class="header__block-image"
+        >
+      </div>
+    </header>
+    <main class="main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="title__h2 events__h2">
+            Актуальні події
+          </h2>
+          <div class="events__item">
+            <div class="events__image">
+              <img
+                src="images/ev_1.jpg"
+                alt="image"
+                class="events__img"
+              >
+            </div>
+            <div class="events__description">
+              <div class="events__footnote">
+                <div class="events__type">ВИСТАВКА</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+              <div class="title__h3 events__title">Йду і повертаюсь</div>
+              <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку 4
+                - українське мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+          </div>
+          <div class="events__item">
+            <div class="events__image">
+              <img
+                src="images/ev_2.jpg"
+                alt="image"
+                class="events__img"
+              >
+            </div>
+            <div class="events__description">
+              <div class="events__footnote">
+                <div class="events__type">ВИСТАВКА</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+              <div class="title__h3 events__title">І спогади і мрії</div>
+              <div class="events__text">Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="events__main" id="main-event">
+          <img
+            src="images/ev_3.jpg"
+            alt="image"
+            class="events__img events__img--widthHeight"
+          >
+          <div class="events__main-description">
+            <div class="events__footnote events__footnote--modMain">
+              <div class="events__type events__type--modMain">Лекція</div>
+              <div class="events__date">26.08-29.11.2019</div>
+            </div>
+            <div class="title__h3
+              events__title
+              events__title--mod"
+            >Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="galery" id="galery">
+        <div class="container">
+          <h2 class="title__h2 galery__h2">
+            Галерея
+          </h2>
+          <div class="galery__row">
+            <div class="galer__row-item grid__item--1-4">
+              <img
+                src="./images/gallery/gal_1.jpg"
+                class="galery__image"
+                alt="image"
+              >
+            </div>
+            <div class="galer__row-item grid__item--5-12">
+              <img
+                src="./images/gallery/gal_2.jpg"
+                class="galery__image"
+                alt="image"
+              >
+            </div>
+          </div>
+          <div class="galery__row">
+            <div class="galer__row-item grid__item--1-8">
+              <img
+                src="./images/gallery/gal_3.jpg"
+                class="galery__image"
+                alt="image"
+              >
+            </div>
+            <div class="galer__row-item grid__item--9-12">
+              <img
+                src="./images/gallery/gal_4.jpg"
+                class="galery__image"
+                alt="image"
+              >
+            </div>
+          </div>
+          <div class="galery__swiper">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./images/gallery/gal_1.jpg" alt="image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery/gal_5.jpg" alt="image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery/gal_1.jpg" alt="image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery/gal_1.jpg" alt="image">
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="form-section" id="form-section">
+        <div class="container form-section__container">
+          <h2 class="title__h2 form-section__h2">
+            Підписка
+          </h2>
+          <p class="form-section__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="#" class="form-section__form">
+            <input
+              type="email"
+              required
+              name="Mail"
+              class="form-section__email"
+              placeholder="Email"
+            >
+            <button class="form-section__submit">
+              <svg
+                width="8"
+                height="12"
+                viewBox="0 0 8 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="form-section__arow"
+              >
+                <path
+                  d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z"
+                  fill="#000"
+                >
+              </svg>
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__top grid">
+          <div class="footer__item grid__item--1-1">
+            <div class="footer__socialWrapper">
+              <a href="./">
+                <img
+                  src="./images/icon.svg"
+                  class="logo"
+                  alt="Logo"
+                >
+              </a>
+              <div class="footer__soc-icons">
+                <a href="https://www.facebook.com"
+                  class="footer__facebook"
+                  target="_blank"
+                >
+                  <svg
+                    width="12"
+                    height="24"
+                    viewBox="0 0 12 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z" fill="black">
+                  </svg>
+                </a>
+                <a href="https://www.instagram.com"
+                  class="footer__instagram"
+                  target="_blank"
+                >
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z" fill="black">
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__item grid__item--3-4">
+            <h4 class="title__h4 footer__h4">Графік роботи</h4>
+            <div class="footer__item-body">
+              <p class="footer__text">
+                <time class="footer__schedule footer__time-start">
+                  12:00
+                </time>—
+                <time class="footer__schedule footer__time-finish">
+                  20:00
+                </time>середа
+              </p>
+              <p class="footer__text">
+                <time class="footer__schedule footer__time-start">
+                  12:00
+                </time>—
+                <time class="footer__schedule footer__time-finish">
+                  20:00
+                </time>четвер
+              </p>
+              <p class="footer__text">
+                <time class="footer__schedule footer__time-start">
+                  12:00
+                </time>—
+                <time class="footer__schedule footer__time-finish">
+                  20:00
+                </time>п'ятниця
+              </p>
+              <p class="footer__text">
+                <time class="footer__schedule footer__time-start">
+                  11:00
+                </time>—
+                <time class="footer__schedule footer__time-finish">
+                  19:00
+                </time>субота
+              </p>
+              <p class="footer__text">
+                <time class="footer__schedule footer__time-start">
+                  11:00
+                </time>—
+                <time class="footer__schedule footer__time-finish">
+                  19:00
+                </time>неділя
+              </p>
+              <div class="footer__text footer__text--dayOff">
+                <span class="footer__schedule">Вихідні</span>: понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+          </div>
+          <div class="footer__item grid__item--5-6">
+            <h4 class="title__h4 footer__h4" id="contacts">Контакти:</h4>
+            <div class="footer__item-body">
+              <p class="footer__text">
+                <a
+                  href="https://www.google.com/maps/place/National+Art+Museum+of+Ukraine/@50.4494274,30.5284618,17z/data
+                  =!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4493269
+                  !4d30.5304215?rlz=1C1RXQR_enUS957US957&sxsrf=APq-WBvPOuZerQu1c41MD5TkuMiBQ4tEHg
+                  :1649809613585&q=National+Art+Museum+of+Ukraine&gsas=1&lsig=AB86z5USsGDHLfe9uJb
+                  -mEAxd-w3&biw=1920&bih=929&dpr=1&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjd-5bj44
+                  _3AhVYRDABHVf3BLEQ_AUoAXoECAIQAw&shorturl=1"
+                  target="_blank"
+                  class="footer__adress"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br>
+                <a
+                  href="tel:38(044)278-13-57"
+                  target="_blank"
+                  class="footer__adress"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="tel:38(044)278-74-54"
+                  target="_blank"
+                  class="footer__adress"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  target="_blank"
+                  class="footer__adress"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="footer__item grid__item--7-7">
+            <div class="footer__line"></div>
+          </div>
+          <div class="footer__item grid__item--8-9">
+            <div class="footer__text footer__text--mod-bottom">
+              <a href="#galery" class="footer__link">Галерея</a>
+            </div>
+            <div class="footer__text footer__text--mod-bottom">
+              <a href="#events" class="footer__link">Виставки та події</a>
+            </div>
+          </div>
+          <div class="footer__item grid__item--10-10">
+            <div class="footer__text footer__text--mod-bottom">
+              <a href="#form-section" class="footer__link">Про нас</a>
+            </div>
+            <div class="footer__text footer__text--mod-bottom">
+              <a href="#contacts" class="footer__link">Контакти</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <p class="footer__info">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__info">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+      <a href="#header" class="footer__buttonUp">
+        <svg
+          width="10"
+          height="12"
+          viewBox="0 0 10 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M5 0L0 5L0.705 5.705L4.5 1.915V12H5.5V1.915L9.295 5.705L10 5L5 0Z" fill="#1A5A4C">
+        </svg>
+      </a>
+    </footer>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module">
+      import Swiper from 'https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js';
+      
+      /* Слайдер галереи на экранах меньше 991px */
+      const swiper = new Swiper('.swiper', {
+        slidesPerView: 'auto',
+        spaceBetween: 30,
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+        simulateTouch: true,
+      });
+    </script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
