--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      rel="icon"
+      type="favicon"
+      href="./images/art_gallery_museum_icon_180185.png"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link type="image/x-icon" href="./images/art_gallery_museum_icon_180185.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -15,7 +21,7 @@
 
     <header class="header">
       <div class="header__nav">
-        <a href="#" class="header__menu-opener"></a>
+        <a href="#menu" class="header__menu-opener"></a>
         <div class="header__abbreviation">
           NA<br>
           MU
@@ -34,10 +40,45 @@
       </div>
     </header>
 
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a href="#" class="header__menu-cross"></a>
+            <div class="header__abbreviation">
+              NA<br>
+              MU
+            </div>
+          </div>
 
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Актуальні події</a>
+            </li>
 
-    <main class="main">
-      <section class="main__events events">
+            <li class="menu__item">
+              <a href="#classic" class="menu__link">Від класицизму до романтизму</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Підписка</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contactus" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+
+    <main class="page__main main">
+      <section class="main__events events" id="events">
         <h2 class="events__title">
           Актуальні
           події
@@ -56,7 +97,7 @@
               </span>
             </div>
 
-            <div class="container__title">
+            <div class="container__title" id="going">
               Йду і повертаюсь
             </div>
 
@@ -82,7 +123,7 @@
               </span>
             </div>
 
-            <div class="container__title">
+            <div class="container__title" id="remember">
               І спогади і мрії
             </div>
 
@@ -108,14 +149,14 @@
               26/08/2019 - 11:00
             </span>
           </div>
-          <div class="title--text--capital">
+          <div class="title--text--capital" id="classic">
             Від класицизму до романтизму
           </div>
 
         </div>
       </section>
 
-      <section class="main__galery galery">
+      <section class="main__galery galery" id="gallery">
         <h2 class="galery__title">
           Галерея
         </h2>
@@ -163,19 +204,127 @@
       </section>
 
       <section class="main__subscribe subscribe">
-        <h2 class="subscribe__title">
+        <h2 class="subscribe__title" id="subscription">
           Підписка
         </h2>
         <p class="subscribe__description">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
         <form class="subscribe__form form">
-          <input class="form__email" placeholder="E-mail">
+          <input
+            class="form__email"
+            placeholder="E-mail"
+            method="post"
+            required
+            action="/"
+          >
           <button class="form__submit">
           </button>
         </form>
       </section>
     </main>
 
+    <footer class="footer" id="contactus">
+      <div class="container">
+        <div class="grid">
+          <div class="footer__abbreviation">
+            <a
+              href="https://namumuseum.business.site/"
+              arget="_blank"
+              class="footer__logoabbreviation grid__item"
+            >
+              NA<br>
+              MU
+            </a>
+          </div>
+
+          <div  class="footer__icons">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__facebook"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__instagram"
+            >
+            </a>
+          </div>
+          <div class="footer__schedule grid__item">
+            <p class="footer__titlesceduel scedule__title">Графік роботи</p>
+            <p class="footer__titlesceduel ">
+              <span class="footer__sceduletime">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__sceduletime">12:00 — 20:00</span> четвер
+              <br>
+              <span class="footer__sceduletime">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__sceduletime">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__sceduletime">11:00 — 19:00</span> неділя
+              <br>
+            </p>
+            <p class="footer__titlesceduel scedule__info"> Вихідні понеділок, вівторок.
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contactdata grid__item">
+            <p class="footer__contact">
+              Контакти:
+            </p>
+            <p class="footer__data">
+              <a
+              href="https://goo.gl/maps/hdAVE6DNhceBsfTG6"
+              target="_blank"
+              class="footer__adress"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+380442781357" class="footer__number">тел. +38 (044) 278-13-57 </a>
+              <a href="tel:+380442787454" class="footer__number">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__email">e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+
+          <div class="footer__topmobile grid__item">
+            <a href="#">
+              <img
+              src="./images/Arrow up.png"
+              alt="Arrow up"
+              class="footer__up"
+              >
+            </a>
+          </div>
+
+          <div class="footer__line grid__item">
+            <img
+              src="./images/linefooter.png"
+              alt="linefooter"
+              class="footer__line-green"
+            >
+          </div>
+
+
+          <div class="footer__navbox1 grid__item">
+            <a href="#" class="footer__link">Галерея</a>
+            <a href="#" class="footer__link">Виставки та події</a>
+          </div>
+
+          <div class="footer__navbox2 grid__item">
+            <a href="#" class="footer__link">Про Нас</a>
+            <a href="#" class="footer__link">Контакти</a>
+          </div>
+          <div class="footer__copyright grid__item">
+            <p class="footer__designed">Designed by Zhyriada Marina</p>
+            <p class="footer__year">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
