--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,14 @@
       <div class="header__nav">
         <a href="#menu" class="header__menu-opener"></a>
         <div class="header__abbreviation">
-          NA<br>
-          MU
+          <a
+            href="https://namumuseum.business.site/"
+            target="_blank"
+            class="footer__logoabbreviation grid__item"
+          >
+            NA<br>
+            MU
+          </a>
         </div>
       </div>
       <div class="header__title">
@@ -210,13 +216,18 @@
         <p class="subscribe__description">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <form class="subscribe__form form">
+        <form
+          class="subscribe__form form"
+          action="https://httpbin.org/get"
+          target="_blank"
+          method="get"
+        >
           <input
             class="form__email"
             placeholder="E-mail"
-            method="post"
+            type="email"
             required
-            action="/"
+
           >
           <button class="form__submit">
           </button>
@@ -230,7 +241,7 @@
           <div class="footer__abbreviation">
             <a
               href="https://namumuseum.business.site/"
-              arget="_blank"
+              target="_blank"
               class="footer__logoabbreviation grid__item"
             >
               NA<br>
