add Style link footer

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,11 @@
       </div>
       <div class="header__title">
         <h1 class="header__title-title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <div class="header__button">
-          <div class="header__button-container">КВИТКИ</div>
-          <div class="header__button-button"></div>
+        <div class="header__box">
+          <a href="#events" class="header__button">
+            <div class="header__button-container">КВИТКИ</div>
+            <div class="header__button-button"></div>
+          </a>
         </div>
         <a class="header__title-events" href="#events">
           <span class="header__title-line"></span>
@@ -218,7 +220,7 @@
         </p>
         <form
           class="subscribe__form form"
-          action="https://httpbin.org/get"
+          action="#"
           target="_blank"
           method="get"
         >
@@ -322,13 +324,13 @@
 
 
           <div class="footer__navbox1 grid__item">
-            <a href="#" class="footer__link">Галерея</a>
-            <a href="#" class="footer__link">Виставки та події</a>
+            <a href="#gallery" class="footer__link">Галерея</a>
+            <a href="#events" class="footer__link">Виставки та події</a>
           </div>
 
           <div class="footer__navbox2 grid__item">
-            <a href="#" class="footer__link">Про Нас</a>
-            <a href="#" class="footer__link">Контакти</a>
+            <a href="#contactus" class="footer__link">Про Нас</a>
+            <a href="#contactus" class="footer__link">Контакти</a>
           </div>
           <div class="footer__copyright grid__item">
             <p class="footer__designed">Designed by Zhyriada Marina</p>
