--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU | ХУДОЖНІЙ МУЗЕЙ</title>
+    <link rel="icon" href="./images/icon/NAMU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,700;1,600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body" id="page-top">
+    <header class="header page__section">
+      <div class="container">
+        <div class="header__background background"></div>
+        <div class="header__content">
+          <div class="top-action header__top-action">
+            <div class="grid grid--no-mobile">
+              <div 
+                class="grid__item
+                grid__item--tablet-1-1
+                grid__item--desktop-1-1"
+              >
+                <a
+                  href="#menu"
+                  class="icon
+                  icon--menu
+                  top-action__icon"
+                ></a>
+              </div>
+              <div 
+                class="grid__item
+                grid__item--tablet-4-5
+                grid__item--desktop-6-7"
+              >
+                <a href="/" class="logo top-action__logo">
+                  <img 
+                    src="./images/icon/NAMU.svg" 
+                    alt="NAMU logo" 
+                    class="logo__img"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid--no-mobile">
+            <div 
+              class="grid__item 
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5"
+            >
+              <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            </div>
+            <div 
+              class="grid__item
+              grid__item--tablet-1-2
+              grid__item--desktop-3-6"
+            >
+              <div class="header__button button">
+                <div class="button__text">Квитки</div>
+                <a href="#" class="button__link"></a>
+              </div>
+            </div>
+          </div>
+          <a href="#current-events" class="header__uniq-link">події</a>
+        </div>
+      </div>
+    </header>
+    <nav class="nav" id="menu">
+      <div class="container">
+        <div class="top-action nav__top-action">
+          <div class="grid grid--no-mobile">
+            <div 
+              class="grid__item
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1"
+            >
+              <a
+                href="#"
+                class="icon
+                icon--close
+                top-action__icon"
+              ></a>
+            </div>
+            <div 
+              class="grid__item
+              grid__item--tablet-4-5
+              grid__item--desktop-6-7"
+            >
+              <a href="#" class="logo top-action__logo">
+                <img 
+                  src="./images/icon/NAMU.svg" 
+                  alt="NAMU logo" 
+                  class="logo__img"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="nav__background background"></div>
+        <div class="grid grid--no-mobile">
+          <div 
+            class="grid__item 
+            grid__item--tablet-1-3 grid__item--desktop-1-5"
+          >
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#current-events" class="nav__link">Актуальні події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Підписка</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Iнформацiя щодо нас</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <section 
+      class="page__section 
+      current-events" 
+      id="current-events"
+    >
+      <h2 class="current-events__title">Актуальні події</h2>
+    </section>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
